--- a/edades.html
+++ b/edades.html
@@ -1,5 +1,14 @@
 <html>
   <head>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+      <script src="script_data/funciones/utilidades.js" type="text/javascript"></script>
+            <script src="script_data/funciones/formatos.js" type="text/javascript"></script>
+            <script src="script_data/funciones/peticiones_ajax.js" type="text/javascript"></script>
+            <script src="script_data/funciones/CrudBase.js" type="text/javascript"></script>
+            <script src="script_data/funciones/storage.js" type="text/javascript"></script>
+            <script src="script_data/prototipos/prototipos.js" type="text/javascript"></script>
+            <script src="script_data/globales.js" type="text/javascript"></script>
+            <script src="script_data/reportes.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
       google.charts.load('current', {'packages':['bar']});
@@ -26,6 +35,8 @@
     </script>
   </head>  
     <a href="menuEventos.html">Volver al Menu</a>
+    <select id="selEventos"></select>
+    <input id="btnReporteEdad" type="button" type="button" value="Generar reporte">
     <div id="barchart_material" style="width: 1200px; height: 500px; margin-left: 50px"></div>
   
 </html
