--- a/general.html
+++ b/general.html
@@ -7,11 +7,23 @@
         <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
         <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
         <link href="estilo/reportes.css" rel="stylesheet" type="text/css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+            <script src="script_data/funciones/utilidades.js" type="text/javascript"></script>
+            <script src="script_data/funciones/formatos.js" type="text/javascript"></script>
+            <script src="script_data/funciones/peticiones_ajax.js" type="text/javascript"></script>
+            <script src="script_data/funciones/CrudBase.js" type="text/javascript"></script>
+            <script src="script_data/funciones/storage.js" type="text/javascript"></script>
+            <script src="script_data/prototipos/prototipos.js" type="text/javascript"></script>
+            <script src="script_data/globales.js" type="text/javascript"></script>
+            <script src="script_data/reportes.js" type="text/javascript"></script>
     </head>
     <body>
         <a href="menuEventos.html">Volver al Menu</a>
-        <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
-            <tr>
+        <select id="selEventos"></select>
+        <input id="btnReporteGeneral" type="button" type="button" value="Generar reporte">
+        <input id="btnExportarReporteGeneral" type="button" type="button" value="Exportar reporte">
+        <table id="tblListaGeneral" class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
+            <!--<tr>
                 <td class="mdl-data-table__cell--non-numeric">Nombre 1</td>
                 <td class="mdl-data-table__cell--non-numeric">Nombre 2</td>
                 <td class="mdl-data-table__cell--non-numeric">Apellido 1</td>
@@ -50,7 +62,7 @@
                 <td class="mdl-data-table__cell--non-numeric">Ciudad de Nacimiento</td>
                 <td class="mdl-data-table__cell--non-numeric">Capacidades </td>
                 <td class="mdl-data-table__cell--non-numeric">Etnia</td>
-            </tr>
+            </tr>-->
         </table>
     </body>
 </html>
