--- a/genero.html
+++ b/genero.html
@@ -1,32 +1,26 @@
 <html>
   <head>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+            <script src="script_data/funciones/utilidades.js" type="text/javascript"></script>
+            <script src="script_data/funciones/formatos.js" type="text/javascript"></script>
+            <script src="script_data/funciones/peticiones_ajax.js" type="text/javascript"></script>
+            <script src="script_data/funciones/CrudBase.js" type="text/javascript"></script>
+            <script src="script_data/funciones/storage.js" type="text/javascript"></script>
+            <script src="script_data/prototipos/prototipos.js" type="text/javascript"></script>
+            <script src="script_data/globales.js" type="text/javascript"></script>
+            <script src="script_data/reportes.js" type="text/javascript"></script>
+
+
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
-      google.charts.load('current', {'packages':['bar']});
-      google.charts.setOnLoadCallback(drawChart);
-
-      function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-          ['Participantes', 'Hombres', 'Mujeres'],
-          ['Genero', 3000,2000]
-        ]);
-
-        var options = {
-          chart: {
-            title: 'Nombre del Evento',
-            subtitle: 'Lugar y fecha del evento'
-          },
-          bars: 'horizontal' // Required for Material Bar Charts.
-        };
-
-        var chart = new google.charts.Bar(document.getElementById('barchart_material'));
-
-        chart.draw(data, google.charts.Bar.convertOptions(options));
-      }
+     
     </script>
   </head>
   <body>
-      <a href="menuEventos.html">Generar Reporte"</a>
+      <a href="menuEventos.html">Volver al menu principal"</a>
+      <select id="selEventos"></select>
+    <input id="btnReporteGenero" type="button" type="button" value="Generar reporte">
     <div id="barchart_material" style="width: 1200px; height: 500px; margin-left: 50px"></div>
   </body>
 </html>
