--- a/participantes.html
+++ b/participantes.html
@@ -24,8 +24,8 @@ and open the template in the editor.
             <script src="script_data/prototipos/prototipos.js" type="text/javascript"></script>
             <script src="script_data/globales.js" type="text/javascript"></script>
             <script src="script_data/participantes.js" type="text/javascript"></script>
-            <!--<script src="script_data/actualizar_registro_participantes.js" type="text/javascript"></script>-->
-            <!--<script src="script_data/offline.js" type="text/javascript"></script>-->
+           <script src="script_data/appsw.js" type="text/javascript"></script>
+            <script src="script_data/offline.js" type="text/javascript"></script>
             <script src="Js/inicio.js" type="text/javascript"></script>
         <!--fin script edgar-->
     </head>
@@ -48,7 +48,7 @@ and open the template in the editor.
                 
                 
             </table>
-            <input type="button" value="Guardar Lista de participantes">
+            <input type="button" value="Guardar Lista de participantes" id="btnGuardarAsistentes">
         </div>
         <!--Division del Formulario de Pobladores-->
         <div class="contenedor" id="contenedorP">
